# doremix

./: .env.example  .env.exemple  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.yml  docker-compose_beta.yml  docker-compose_prod.yml  mypy.ini  pyproject.toml  pytest.ini
database/: init.sql  insert.sql
docs/plans/: admin-playlist-cli-01-SUMMARY.md  admin-playlist-cli-02-SUMMARY.md  admin-playlist-cli-03-SUMMARY.md
docs/superpowers/plans/: 2026-04-02-playlist-sorting.md
docs/superpowers/specs/: 2026-04-01-playlist-lazy-loading-design.md
documentation/: README.md  init.sql  mcd.md
documentation/authentication/: authentication.drawio
documentation/database/: mcd.md
scripts/: create_playlist_vote.sql  sync_artists.py  sync_playlist_vote_aggregates.sql
src/alerting/: README.md  compose.yaml  init-monitors.py  main.py  monitors.json  nginx.conf  notifications.json
src/back/: database.py  main.py  scheduler.py
src/back/controllers/: __init__.py  admin_playlist_controller.py  artist.py  auth_controller.py  genre.py  like.py  login.py  password_reset.py  playlist.py  register.py  track.py  user.py
src/back/jobs/: youtube_checker.py
src/back/middleware/: auth_middleware.py  rate_limiter.py
src/back/models/: __init__.py  enums.py  (+20 more)
src/cli/: README.md  main.py  pyproject.toml
src/front/: .gitignore  fix_repo.py  index.html  main.js  main.tsx  package-lock.json  package.json  router.js  router.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
src/python/: connect_db.py  main.py
src/web/: index.html
(+247 files in other folders)
