[project]
name = "doremix"
version = "0.1.0"
description = "List of dependencies for doremix tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "bcrypt==3.2.2",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "httpx>=0.23.0",
    "passlib>=1.7.4",
    "pillow>=12.1.0",
    "psutil>=7.2.1",
    "pydantic>=2.12.5",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.46",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
    "yt-dlp>=2025.12.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
